--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -53,3 +53,16 @@ jobs:
         run: npm ci
       - name: Build the code
         run: npm run build
+
+  coverage:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout and Setup Node
+        uses: ./.github/actions/checkout-and-setup
+      - run: npm test -- --coverage
+      - uses: actions/upload-artifact@v3
+        name: Active coverage report
+        with:
+          name: coverage-report
+          path: coverage
