--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -43,8 +43,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout and Setup Node
-        uses: ./.github/actions/checkout-and-setup
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'npm'
       - run: npm test -- --coverage
       - uses: actions/upload-artifact@v3
         name: Active coverage report
