--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -50,9 +50,11 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+      - name: Install modules from npm
+        run: npm ci
       - run: npm test -- --coverage
-      - uses: actions/upload-artifact@v3
-        name: Active coverage report
+      - name: Active coverage report
+        uses: actions/upload-artifact@v3
         with:
           name: coverage-report
           path: coverage
